# OhMyCowork

./: AGENTS.md  CLAUDE.md  DEVELOP.md  LICENSE  PLAN.md  README.md  TEST.md  WEBSITE.md  build-dmg.sh  inc_version.sh  index.html  package-lock.json  package.json  tailwind.config.js  test.sh  vite.config.ts
scripts/: clean_rebuild_macos.sh  publish-homebrew.sh  release-macos.sh  release_homebrew.sh
sidecar/: agent.js  agent.ts  package-lock.json  package.json  tsconfig.json  vitest.config.js  vitest.config.ts
sidecar/skills/: code-review.md  git-commit-helper.md  index.js  react-best-practices.md  web-design-guidelines.md
sidecar/subagents/: folder_organizer.js  folder_organizer.ts
sidecar/tests/: archive_operations.test.js  data_analysis.test.ts  excel_operations.test.js  file_management.test.js  file_management.test.ts  format_conversion.test.ts  helpers.ts  image_operations.test.ts  pdf_operations.test.ts  powerpoint_operations.test.ts  web_operations.test.js  word_operations.test.js
sidecar/tools/: agent_browser.js  agent_browser.ts  archive_operations.js  archive_operations.ts  calculate_expression.js  calculate_expression.ts  data_analysis.js  data_analysis.ts  excel_operations.js  excel_operations.ts  file_management.js  file_management.ts  format_conversion.js  format_conversion.ts  (+29 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: agent-aarch64-apple-darwin  agent-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+28 files in other folders)
